{
    "name": "TestInputAction",
    "maps": [
        {
            "name": "Test",
            "id": "bf99ff3d-da20-41b1-b3f6-87cc1723598b",
            "actions": [
                {
                    "name": "Test1",
                    "type": "Button",
                    "id": "3a97e5cf-db7e-4baa-ae40-92607e053fcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test2",
                    "type": "Button",
                    "id": "689768ec-18fd-4a40-b104-8ee4f88b968c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test3",
                    "type": "Button",
                    "id": "b43cfe4f-7f36-4ab2-b3a8-5538d15472a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test4",
                    "type": "Button",
                    "id": "e4e75c37-ccb5-4142-a004-ed6773f59198",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test5",
                    "type": "Button",
                    "id": "e0455d0f-bac7-4b6c-8c37-225db75c8702",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LClick",
                    "type": "Button",
                    "id": "069f78c4-f4c9-4b00-96e2-90706d6bbfb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RClick",
                    "type": "Button",
                    "id": "6879e387-50b7-4c41-8331-a2f9b473a75f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8a67e55a-9097-459a-8bca-265a09d556d8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "Test1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "119daae8-d329-4eeb-b028-040be85d903f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "Test2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22cb99f6-7a3a-493c-8318-6c96e9a300e6",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "Test3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f46bf41a-3731-4811-8d69-4f59a64ec3df",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "Test4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5aa694f6-24dc-4df5-8622-a5dcc92a285b",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "Test5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "131d9d19-2e77-4059-9d89-0edda0dc9259",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "LClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cd58c01-b537-4a3d-bcfd-95d3c97fad47",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "km",
                    "action": "RClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "km",
            "bindingGroup": "km",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}